--- a/BusyBeekeeper/BusyBeekeeper/BusyBeekeeper.csproj
+++ b/BusyBeekeeper/BusyBeekeeper/BusyBeekeeper.csproj
@@ -109,13 +109,39 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Game1.cs" />
+    <Compile Include="BusyBeekeeperGame.cs" />
+    <Compile Include="Screens\BeeHiveScreen.cs" />
+    <Compile Include="Screens\BeeYardScreen.cs" />
+    <Compile Include="Screens\BottlingScreen.cs" />
+    <Compile Include="Screens\ExtractionScreen.cs" />
+    <Compile Include="Screens\FarmersMarkerScreen.cs" />
+    <Compile Include="Screens\GameSelectionScreen.cs" />
+    <Compile Include="Screens\HoneyHouseScreen.cs" />
+    <Compile Include="Screens\InventoryScreen.cs" />
+    <Compile Include="Screens\MarketPricesScreen.cs" />
+    <Compile Include="Screens\MarketSummaryScreen.cs" />
+    <Compile Include="Screens\ShopScreen.cs" />
+    <Compile Include="Screens\TitleScreen.cs" />
+    <Compile Include="Screens\UncappingScreen.cs" />
+    <Compile Include="Screens\WorldScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
     <Content Include="GameThumbnail.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\TccLib.Xna.Framework\TccLib.Xna.Framework.csproj">
+      <Project>{68D1D67E-3C37-4C07-A40F-EAD2D786841D}</Project>
+      <Name>TccLib.Xna.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\TccLib.Xna.GameStateManagement\TccLib.Xna.GameStateManagement.csproj">
+      <Project>{219629E4-CCB9-45C0-A25E-C5C338798B81}</Project>
+      <Name>TccLib.Xna.GameStateManagement</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\TccLib\TccLib.csproj">
+      <Project>{A3EF9DBE-14A6-4EAF-8238-513903387DD7}</Project>
+      <Name>TccLib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BusyBeekeeperContent\BusyBeekeeperContent.contentproj">
       <Name>BusyBeekeeperContent</Name>
       <XnaReferenceType>Content</XnaReferenceType>
@@ -147,6 +173,12 @@
       <ProductName>Microsoft XNA Framework Redistributable 4.0</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Attributes\" />
+    <Folder Include="Awards\" />
+    <Folder Include="Behaviors\" />
+    <Folder Include="Components\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
