--- a/BusyBeekeeper/BusyBeekeeper/BusyBeekeeper.csproj
+++ b/BusyBeekeeper/BusyBeekeeper/BusyBeekeeper.csproj
@@ -107,12 +107,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Behaviors\OnMouseUpBehavior.cs" />
+    <Compile Include="Behaviors\OnFocusFontChangeBehavior.cs" />
+    <Compile Include="Components\TextButtonComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="BusyBeekeeperGame.cs" />
     <Compile Include="Screens\BeeHiveScreen.cs" />
     <Compile Include="Screens\BeeYardScreen.cs" />
     <Compile Include="Screens\BottlingScreen.cs" />
+    <Compile Include="Screens\CreditsScreen.cs" />
     <Compile Include="Screens\ExtractionScreen.cs" />
     <Compile Include="Screens\FarmersMarkerScreen.cs" />
     <Compile Include="Screens\GameSelectionScreen.cs" />
@@ -174,12 +178,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Attributes\" />
-    <Folder Include="Awards\" />
-    <Folder Include="Behaviors\" />
-    <Folder Include="Components\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
