Overhaul to GameStateManagement
Moved GameStateManagement to live directly in the game's project. This
makes more sense at the moment. Changes how game screens are managed.
There will always be only one actual GameScreen, one optional
PopupScreen, and - only when transitioning from one screen to another,
one Transition Screen active at any given time. More notes on this
process can be found in the ScreenManager class.

--- a/TccLib/TccLib.csproj
+++ b/TccLib/TccLib.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\EventExtensions.cs" />
+    <Compile Include="Extensions\ExceptionExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
