--- a/BusyBeekeeper/BusyBeekeeper/BusyBeekeeper.csproj
+++ b/BusyBeekeeper/BusyBeekeeper/BusyBeekeeper.csproj
@@ -107,12 +107,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Behaviors\FadeBehavior.cs" />
     <Compile Include="Behaviors\OnMouseUpBehavior.cs" />
     <Compile Include="Behaviors\OnFocusFontChangeBehavior.cs" />
+    <Compile Include="Components\FadeComponent.cs" />
     <Compile Include="Components\TextButtonComponent.cs" />
+    <Compile Include="GameStateManagement\GameScreen.cs" />
+    <Compile Include="InputAction.cs" />
+    <Compile Include="GameStateManagement\InputState.cs" />
+    <Compile Include="GameStateManagement\PopupScreen.cs" />
+    <Compile Include="GameStateManagement\ScreenManager.cs" />
+    <Compile Include="GameStateManagement\TransitionScreen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="BusyBeekeeperGame.cs" />
+    <Compile Include="Screens\BackgroundScreen.cs" />
     <Compile Include="Screens\BeeHiveScreen.cs" />
     <Compile Include="Screens\BeeYardScreen.cs" />
     <Compile Include="Screens\BottlingScreen.cs" />
@@ -137,10 +146,6 @@
     <ProjectReference Include="..\..\TccLib.Xna.Framework\TccLib.Xna.Framework.csproj">
       <Project>{68D1D67E-3C37-4C07-A40F-EAD2D786841D}</Project>
       <Name>TccLib.Xna.Framework</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\TccLib.Xna.GameStateManagement\TccLib.Xna.GameStateManagement.csproj">
-      <Project>{219629E4-CCB9-45C0-A25E-C5C338798B81}</Project>
-      <Name>TccLib.Xna.GameStateManagement</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\TccLib\TccLib.csproj">
       <Project>{A3EF9DBE-14A6-4EAF-8238-513903387DD7}</Project>
