Beginning of backing data
Player selection screen is visually stubbed out. This means I need to
begin working on the data which runs the whole game. What is a player,
what is a bee yard, all that jazz.

--- a/BusyBeekeeper.Data/BusyBeekeeper.Data.csproj
+++ b/BusyBeekeeper.Data/BusyBeekeeper.Data.csproj
@@ -97,6 +97,8 @@
     <Compile Include="BeeSuit.cs" />
     <Compile Include="BeeYard.cs" />
     <Compile Include="Bottle.cs" />
+    <Compile Include="ComponentCollection.cs" />
+    <Compile Include="ComponentCollectionCountChangedMessage.cs" />
     <Compile Include="HoneyExtractor.cs" />
     <Compile Include="LawnMower.cs" />
     <Compile Include="MarketBooth.cs" />
