--- a/BusyBeekeeper/BusyBeekeeper/BusyBeekeeper.csproj
+++ b/BusyBeekeeper/BusyBeekeeper/BusyBeekeeper.csproj
@@ -108,11 +108,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Behaviors\FadeBehavior.cs" />
+    <Compile Include="Behaviors\InputTextBoxBehavior.cs" />
     <Compile Include="Behaviors\OnMouseUpBehavior.cs" />
     <Compile Include="Behaviors\OnFocusFontChangeBehavior.cs" />
+    <Compile Include="Behaviors\RadioButtonBehavior.cs" />
     <Compile Include="Components\FadeComponent.cs" />
     <Compile Include="Components\GameSlotButtonComponent.cs" />
-    <Compile Include="Components\TextButtonComponent.cs" />
+    <Compile Include="Components\AvatarSelectionComponent.cs" />
+    <Compile Include="Components\TextBoxComponent.cs" />
     <Compile Include="Extensions\ComponentExtensions.cs" />
     <Compile Include="GameStateManagement\GameScreen.cs" />
     <Compile Include="InputAction.cs" />
@@ -120,7 +123,7 @@
     <Compile Include="GameStateManagement\PopupScreen.cs" />
     <Compile Include="GameStateManagement\ScreenManager.cs" />
     <Compile Include="GameStateManagement\TransitionScreen.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="MessageHandlers\SwitchableColorMessageHandler.cs" />
     <Compile Include="PlayerManager.cs" />
     <Compile Include="PlayerSummary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -149,6 +152,10 @@
     <Content Include="GameThumbnail.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\BusyBeekeeper.Data\BusyBeekeeper.Data.csproj">
+      <Project>{D140ED48-BA97-452E-AD48-EE4B1E7D3A1D}</Project>
+      <Name>BusyBeekeeper.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\TccLib.Xna.Framework\TccLib.Xna.Framework.csproj">
       <Project>{68D1D67E-3C37-4C07-A40F-EAD2D786841D}</Project>
       <Name>TccLib.Xna.Framework</Name>
@@ -189,7 +196,9 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Renderers\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
