Added meta data classes
Meta data classes contain information which is presisted at the
application level and will never change (once the application is
published). Every meta data class has an id which actual save data will
reference when saved. Still need to create pipeline extension classes to
parse the data files from XML to these meta classes.

--- a/BusyBeekeeper.Data/BusyBeekeeper.Data.csproj
+++ b/BusyBeekeeper.Data/BusyBeekeeper.Data.csproj
@@ -104,7 +104,20 @@
     <Compile Include="LawnMower.cs" />
     <Compile Include="MarketBooth.cs" />
     <Compile Include="MarketHelper.cs" />
-    <Compile Include="MarketHelperAvatar.cs" />
+    <Compile Include="Meta\MetaBottle.cs" />
+    <Compile Include="Meta\MetaPlayerAvatar.cs" />
+    <Compile Include="Meta\MetaBeeSuit.cs" />
+    <Compile Include="Meta\MetaBeeYard.cs" />
+    <Compile Include="Meta\MetaHoneyExtractor.cs" />
+    <Compile Include="Meta\MetaLawnMower.cs" />
+    <Compile Include="Meta\MetaMarketBooth.cs" />
+    <Compile Include="Meta\MetaMarketHelper.cs" />
+    <Compile Include="Meta\MetaQueenBee.cs" />
+    <Compile Include="Meta\MetaSmoker.cs" />
+    <Compile Include="Meta\MetaSuper.cs" />
+    <Compile Include="Meta\MetaSuperPaint.cs" />
+    <Compile Include="Meta\MetaTruck.cs" />
+    <Compile Include="Meta\MetaUncapingKnife.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayerAvatar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
