--- a/BusyBeekeeper/BusyBeekeeper/BusyBeekeeper.csproj
+++ b/BusyBeekeeper/BusyBeekeeper/BusyBeekeeper.csproj
@@ -110,24 +110,31 @@
     <Compile Include="BeeWorldManagerComponent.cs" />
     <Compile Include="BusyBeekeeperGame.cs" />
     <Compile Include="DataRepositories\BeeYardRepository.cs" />
+    <Compile Include="DataRepositories\LawnMowerRepository.cs" />
     <Compile Include="DataRepositories\PlayerAvatarRepository.cs" />
-    <Compile Include="DebugConsoleTickDumper.cs" />
+    <Compile Include="DataRepositories\SuperRepository.cs" />
     <Compile Include="IGameScreen.cs" />
     <Compile Include="IGameScreenManager.cs" />
     <Compile Include="InputState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ScreenManagerComponent.cs" />
+    <Compile Include="Screens\BeeWorldHudComponent.cs" />
     <Compile Include="Screens\BeeWorldScreen.cs" />
+    <Compile Include="Screens\BeeWorldYardComponent.cs" />
+    <Compile Include="Screens\BeeYardHiveComponent.cs" />
+    <Compile Include="Screens\BeeYardHubComponent.cs" />
     <Compile Include="Screens\BeeYardScreen.cs" />
-    <Compile Include="Screens\Components\Button.cs" />
-    <Compile Include="Screens\Components\EmptyBackgroundRenderer.cs" />
-    <Compile Include="Screens\Components\IBackgroundRenderer.cs" />
-    <Compile Include="Screens\Components\Label.cs" />
-    <Compile Include="Screens\Components\RectangleScreenComponent.cs" />
-    <Compile Include="Screens\Components\ScreenComponent.cs" />
-    <Compile Include="Screens\Components\SolidBackgroundRenderer.cs" />
+    <Compile Include="Screens\CommonComponents\Button.cs" />
+    <Compile Include="Screens\CommonComponents\EmptyBackgroundRenderer.cs" />
+    <Compile Include="Screens\CommonComponents\IBackgroundRenderer.cs" />
+    <Compile Include="Screens\CommonComponents\Label.cs" />
+    <Compile Include="Screens\CommonComponents\RectangleScreenComponent.cs" />
+    <Compile Include="Screens\HudComponent.cs" />
+    <Compile Include="Screens\ScreenComponent.cs" />
+    <Compile Include="Screens\CommonComponents\SolidBackgroundRenderer.cs" />
     <Compile Include="Screens\GameScreenBase.cs" />
+    <Compile Include="VectorUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
