--- a/BusyBeekeeper.Data.Graphics/BusyBeekeeper.Data.Graphics.csproj
+++ b/BusyBeekeeper.Data.Graphics/BusyBeekeeper.Data.Graphics.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BeeYard\BeeYardHiveInfo.cs" />
     <Compile Include="BeeWorld\BeeYardWorldInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
