--- a/BusyBeekeeper.Data/BusyBeekeeper.Data.csproj
+++ b/BusyBeekeeper.Data/BusyBeekeeper.Data.csproj
@@ -100,6 +100,7 @@
     <Compile Include="BeeYard.cs" />
     <Compile Include="Bottle.cs" />
     <Compile Include="HoneyExtractor.cs" />
+    <Compile Include="LawnMower.cs" />
     <Compile Include="MetaBottle.cs" />
     <Compile Include="MetaPlayerAvatar.cs" />
     <Compile Include="MetaQueenBee.cs" />
