--- a/BusyBeekeeper/BusyBeekeeper/BusyBeekeeper.csproj
+++ b/BusyBeekeeper/BusyBeekeeper/BusyBeekeeper.csproj
@@ -112,6 +112,8 @@
     <Compile Include="DataRepositories\BeeYardRepository.cs" />
     <Compile Include="DataRepositories\LawnMowerRepository.cs" />
     <Compile Include="DataRepositories\PlayerAvatarRepository.cs" />
+    <Compile Include="DataRepositories\QueenBeeRepository.cs" />
+    <Compile Include="DataRepositories\SmokerRepository.cs" />
     <Compile Include="DataRepositories\SuperRepository.cs" />
     <Compile Include="IGameScreen.cs" />
     <Compile Include="IGameScreenManager.cs" />
@@ -119,6 +121,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ScreenManagerComponent.cs" />
+    <Compile Include="Screens\BeeHiveHudComponent.cs" />
+    <Compile Include="Screens\BeeHiveScreen.cs" />
+    <Compile Include="Screens\BeeHiveSuperComponent.cs" />
     <Compile Include="Screens\BeeWorldHudComponent.cs" />
     <Compile Include="Screens\BeeWorldScreen.cs" />
     <Compile Include="Screens\BeeWorldYardComponent.cs" />
@@ -134,6 +139,7 @@
     <Compile Include="Screens\ScreenComponent.cs" />
     <Compile Include="Screens\CommonComponents\SolidBackgroundRenderer.cs" />
     <Compile Include="Screens\GameScreenBase.cs" />
+    <Compile Include="Screens\TravelingScreen.cs" />
     <Compile Include="VectorUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
