Heavy bee hive changes.
The bee hive got some cleanup to better split up some of the components.
Added boilerplate code for traveling to the shop and honeyhouse.

--- a/BusyBeekeeper.Data.Graphics.PipelineExtensions/BusyBeekeeper.Data.Graphics.PipelineExtensions.csproj
+++ b/BusyBeekeeper.Data.Graphics.PipelineExtensions/BusyBeekeeper.Data.Graphics.PipelineExtensions.csproj
@@ -50,8 +50,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BeeWorld\BeeYardWorldInfoImporter.cs" />
-    <Compile Include="BeeWorld\BeeYardWorldInfoProcessor.cs" />
+    <Compile Include="BeeWorld\BeeWorldInfoImporter.cs" />
+    <Compile Include="BeeWorld\BeeWorldInfoProcessor.cs" />
     <Compile Include="BeeYard\BeeYardHiveInformationImporter.cs" />
     <Compile Include="BeeYard\BeeYardWorldInfoProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
