--- a/BusyBeekeeper/BusyBeekeeper/BusyBeekeeper.csproj
+++ b/BusyBeekeeper/BusyBeekeeper/BusyBeekeeper.csproj
@@ -125,12 +125,14 @@
     <Compile Include="Screens\BeeHiveScreen.cs" />
     <Compile Include="Screens\BeeHiveSuperComponent.cs" />
     <Compile Include="Screens\BeeWorldHudComponent.cs" />
+    <Compile Include="Screens\BeeWorldLocationComponent.cs" />
     <Compile Include="Screens\BeeWorldScreen.cs" />
     <Compile Include="Screens\BeeWorldYardComponent.cs" />
     <Compile Include="Screens\BeeYardHiveComponent.cs" />
     <Compile Include="Screens\BeeYardHubComponent.cs" />
     <Compile Include="Screens\BeeYardScreen.cs" />
     <Compile Include="Screens\CommonComponents\Button.cs" />
+    <Compile Include="Screens\CommonComponents\ButtonMenuComponent.cs" />
     <Compile Include="Screens\CommonComponents\EmptyBackgroundRenderer.cs" />
     <Compile Include="Screens\CommonComponents\IBackgroundRenderer.cs" />
     <Compile Include="Screens\CommonComponents\InventoryItem.cs" />
@@ -138,12 +140,17 @@
     <Compile Include="Screens\CommonComponents\InventoryItemListComponent.ItemCollection.cs" />
     <Compile Include="Screens\CommonComponents\InventoryItemSelectorComponent.cs" />
     <Compile Include="Screens\CommonComponents\Label.cs" />
+    <Compile Include="Screens\CommonComponents\MenuButton.cs" />
+    <Compile Include="Screens\CommonComponents\MenuButtonCollection.cs" />
     <Compile Include="Screens\CommonComponents\RectangleScreenComponent.cs" />
+    <Compile Include="Screens\HoneyHouseScreen.cs" />
     <Compile Include="Screens\HudComponent.cs" />
     <Compile Include="Screens\ScreenComponent.cs" />
     <Compile Include="Screens\CommonComponents\SolidBackgroundRenderer.cs" />
     <Compile Include="Screens\GameScreenBase.cs" />
+    <Compile Include="Screens\ShopScreen.cs" />
     <Compile Include="Screens\TravelingScreen.cs" />
+    <Compile Include="SharedProperty.cs" />
     <Compile Include="VectorUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -199,7 +206,9 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Compile Include="Screens\CommonComponents\ButtonMenuComponent.Collection.cs" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
