Working through shop screens.
Working through implementation for each of the shops. The shop is
divided into multiple sections, meaning there are a total (at the
moment) of 7 screens which comprise the shop.

--- a/BusyBeekeeper.Data.PipelineExtensions/BusyBeekeeper.Data.PipelineExtensions.csproj
+++ b/BusyBeekeeper.Data.PipelineExtensions/BusyBeekeeper.Data.PipelineExtensions.csproj
@@ -51,6 +51,8 @@
   <ItemGroup>
     <Compile Include="BeeYardDataImporter.cs" />
     <Compile Include="BeeYardDataProcessor.cs" />
+    <Compile Include="SuperPaintDataImporter.cs" />
+    <Compile Include="SuperPaintDataProcessor.cs" />
     <Compile Include="SmokerDataImporter.cs" />
     <Compile Include="SmokerDataProcessor.cs" />
     <Compile Include="QueenBeeDataImporter.cs" />
