--- a/BusyBeekeeper.Data.Graphics.PipelineExtensions/BusyBeekeeper.Data.Graphics.PipelineExtensions.csproj
+++ b/BusyBeekeeper.Data.Graphics.PipelineExtensions/BusyBeekeeper.Data.Graphics.PipelineExtensions.csproj
@@ -55,6 +55,8 @@
     <Compile Include="BeeYard\BeeYardHiveInformationImporter.cs" />
     <Compile Include="BeeYard\BeeYardWorldInfoProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shop\ShopSectionInfoImporter.cs" />
+    <Compile Include="Shop\ShopSectionInfoProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BusyBeekeeper.Data.Graphics\BusyBeekeeper.Data.Graphics.csproj">
