--- a/BusyBeekeeper.Data.Graphics/BusyBeekeeper.Data.Graphics.csproj
+++ b/BusyBeekeeper.Data.Graphics/BusyBeekeeper.Data.Graphics.csproj
@@ -48,6 +48,7 @@
     <Compile Include="BeeYard\BeeYardHiveInfo.cs" />
     <Compile Include="BeeWorld\BeeWorldYardInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shop\ShopSectionInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
